<resources>
    <string name="app_name">RemindMe</string>

    <!--Welcome Screen Strings-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="gotIt">GOT IT</string>

    <!--Welcome Screen Contents-->
    <string name="welcome_page1_title">Page1 Title</string>
    <string name="welcome_page1_description">Description Page1</string>
    <string name="welcome_page2_title">Page2 Title</string>
    <string name="welcome_page2_description">Description Page2</string>
    <string name="welcome_page3_title">Page3 Title</string>
    <string name="welcome_page3_description">Description Page3</string>
    <string name="welcome_page4_title">Page4 Title</string>
    <string name="welcome_page4_description">Description Page4</string>
    <string name="options">Options</string>
    <string name="reminder">Reminder</string>
    <string name="location_based_reminder">Location Based Reminder</string>
    <string name="notes">Notes</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="action_delete_selected_items">Delete</string>
    <string name="upcoming_reminder">Upcoming Reminders</string>
    <string name="action_restore_selected_items">Restore</string>
    <string name="action_delete_selected_items_forever">Delete Forever</string>

</resources>
